--- a/OnlineNoticeBoardSystem/Admin/Admin.master
+++ b/OnlineNoticeBoardSystem/Admin/Admin.master
@@ -94,7 +94,7 @@
 
     <div id="divNavigation">
     <ul >
-      <li><a href="AllNotices.aspx">Home</a></li>
+      <li><a href="AllNotices.aspx">HOME</a></li>
       <li><a href="ManageNotices.aspx">MANAGE NOTICE</a></li>
       <li><a href="ManageUsers.aspx">MANAGE USERS</a></li>
       <li><a href="ManageRoutines.aspx">MANAGE ROUTINE</a></li>
