--- a/OnlineNoticeBoardSystem/Teachers/Teachers.master
+++ b/OnlineNoticeBoardSystem/Teachers/Teachers.master
@@ -95,8 +95,8 @@
     <ul >
       <li><a href="AllNotices.aspx">HOME</a></li>
       <li><a href="AddNotice.aspx">MANAGE NOTICE</a></li>
-      <li><a href="Settings.aspx">SETTINGS</a></li>
-      
+      <li><a href="Routine.aspx">ROUTINE</a></li>
+      <li><a href="Settings.aspx">SETTINGS</a></li>      
     </ul>
     </div>
 
